--- a/spacehub.client/src/App.css
+++ b/spacehub.client/src/App.css
@@ -1,11 +1,6 @@
 ﻿#root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
-}
-
-th, td {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
