--- a/spacehub.client/src/Components/Homepage/HeroImageRight.module.css
+++ b/spacehub.client/src/Components/Homepage/HeroImageRight.module.css
@@ -2,7 +2,7 @@
     background-color: #11284b;
     background-size: cover;
     background-position: center;
-    background-image: linear-gradient(250deg, rgba(130, 201, 30, 0) 0%, #062343 70%), url(https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8&auto=format&fit=crop&w=1080&q=80);
+    background-image: linear-gradient(250deg, rgba(130, 201, 30, 0.05) 0%, #000712 70%), url(https://wallpapercave.com/wp/wp9116464.jpg);
     padding-top: calc(var(--mantine-spacing-xl) * 3);
     padding-bottom: calc(var(--mantine-spacing-xl) * 3);
 }
