--- a/spacehub.client/src/Components/Admin/Login.module.css
+++ b/spacehub.client/src/Components/Admin/Login.module.css
@@ -2,3 +2,11 @@
     font-family: Greycliff CF, var(--mantine-font-family);
     font-weight: 900;
 }
+
+
+.login_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
