--- a/spacehub.client/src/Components/Events/EventsIntroSection.module.css
+++ b/spacehub.client/src/Components/Events/EventsIntroSection.module.css
@@ -1,3 +1,10 @@
+.introdiv {
+    padding-top: calc(2.5rem* var(--mantine-scale));
+    max-width: calc(76.25rem* var(--mantine-scale));
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .wrapper {
     padding: calc(var(--mantine-spacing-xl) * 2) var(--mantine-spacing-xl);
 }
