--- a/spacehub.client/src/App.css
+++ b/spacehub.client/src/App.css
@@ -4,3 +4,10 @@
     margin: 0;
     padding: 0;
 }
+
+@font-face {
+    font-family: 'SpacedFont';
+    src: url('./assets/spaced-otf.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
