--- a/spacehub.client/src/Components/SpaceHubLogo/SHLogo.module.css
+++ b/spacehub.client/src/Components/SpaceHubLogo/SHLogo.module.css
@@ -1,9 +1,10 @@
 .logo {
     font-family: 'SpacedFont', sans-serif;
     display: inline-block;
-    transform: scaleX(1.5); /* Adjust the scale factor as needed */
+    transform: scaleX(1.7); /* Adjust the scale factor as needed */
     transform-origin: left; /* Keeps the text aligned to the left while scaling */
-    letter-spacing: 2px;
+    letter-spacing: 1.5px;
+    color: white;
 }
 
 h3 {
