--- a/spacehub.client/src/Components/Layout.module.css
+++ b/spacehub.client/src/Components/Layout.module.css
@@ -30,3 +30,12 @@
     color: var(--mantine-color-white);
 }
 }
+
+.root {
+    left: 0;
+    bottom: 0;
+    width: 100vw;
+    background-color: red;
+    color: white;
+    text-align: center;
+}
