--- a/spacehub.client/src/Components/Footer/ShFooter.module.css
+++ b/spacehub.client/src/Components/Footer/ShFooter.module.css
@@ -100,7 +100,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: var(--mantine-spacing-md) var(--mantine-spacing-md);
+    padding: var(--mantine-spacing-sm) var(--mantine-spacing-md);
 
     @media (max-width: $mantine-breakpoint-sm) {
         flex-direction: column;
