Update Events Page Card UI

--- a/spacehub.client/src/Components/Events/CardsCarousel.module.css
+++ b/spacehub.client/src/Components/Events/CardsCarousel.module.css
@@ -23,3 +23,8 @@
     font-weight: 700;
     text-transform: uppercase;
 }
+
+.description {
+    color: var(--mantine-color-white);
+    font-weight: 500;
+}
