--- a/spacehub.client/src/Components/Admin/ManageEvents/ManageEvents.module.css
+++ b/spacehub.client/src/Components/Admin/ManageEvents/ManageEvents.module.css
@@ -5,24 +5,28 @@
     justify-content: space-between;
     background-size: cover;
     background-position: center;
-    min-height: 300px;
+    max-width: 310px;
 }
 
 .category {
-    font-size: 0.75rem;
-    color: #6b7280;
+    color: var(--mantine-color-white);
+    opacity: 0.7;
+    font-weight: 700;
+    text-transform: uppercase;
 }
 
 .title {
-    font-size: 1.25rem;
-    font-weight: 700;
-    margin: 0.5rem 0;
+    font-family: Greycliff CF, sans-serif;
+    font-weight: 900;
+    color: var(--mantine-color-white);
+    line-height: 1.2;
+    font-size: rem(32px);
+    margin-top: var(--mantine-spacing-xs);
 }
 
 .description {
-    font-size: 1rem;
-    color: #4b5563;
-    margin-bottom: 1rem;
+    color: var(--mantine-color-white);
+    font-weight: 500;
 }
 
 .link {
