Manage Exec Table Design Update

--- a/spacehub.client/src/Components/Admin/ManageExecs/ExecInterface.module.css
+++ b/spacehub.client/src/Components/Admin/ManageExecs/ExecInterface.module.css
@@ -25,11 +25,11 @@
 }
 
 .form {
-    flex-grow: 1;
+    align-self: stretch;
 }
 
 .table {
-    flex-shrink: 5;
+    align-self: stretch;
 }
 
 .social {
