--- a/spacehub.client/src/Components/Membership/Membership.module.css
+++ b/spacehub.client/src/Components/Membership/Membership.module.css
@@ -89,6 +89,14 @@
      min-width: 26em;
 }
 
+.joinContainer {
+    padding-top: calc(2.5rem* var(--mantine-scale));
+    max-width: calc(76.25rem* var(--mantine-scale));
+    margin-left: auto;
+    margin-right: auto;
+    margin: 0 auto;
+}
+
 /*.root {
     width: 30em;
 }*/
