--- a/spacehub.client/src/Components/Homepage/Hero2.module.css
+++ b/spacehub.client/src/Components/Homepage/Hero2.module.css
@@ -1,3 +1,15 @@
+.backgroundVideo {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 0;
+}
+
 .inner {
     display: flex;
     justify-content: space-between;
